# src/contracts/PaginatedResponse.ts
@@ -1,0 +1,10 @@
+export type PaginatedResponse<T> = {
+  meta: PageinatedResponseMeta;
+  data: T;
+};
+
+type PageinatedResponseMeta = {
+  page: number;
+  pageSize: number;
+  total: number;
+};
